# rjd

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: WINDOWS_SMOKE.md
docs/research/: CI_CD_RESEARCH_2026-02-27.md  PARITY_AND_ADDITIONAL_REPOS_2026-02-27.md  RUST_CODE_QUALITY_DEEP_DIVE_2026-02-27.md
scripts/: windows-smoke.ps1
src/: lib.rs
