[package]
name = "rjd"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust Java Doctor: Java runtime discovery and diagnostics"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
which = "8.0"

[dev-dependencies]
tempfile = "3.14"
